# taifex-cpp-sdk

./: .gitignore  CMakeLists.txt  README.md  checksum.cpp  checksum.h  common_header.cpp  common_header.h  logger.cpp  logger.h  main_checksum_test.cpp  main_common_header_parser_test.cpp  main_error_codes_test.cpp  main_logger_test.cpp  main_message_identifier_test.cpp  main_pack_bcd_test.cpp  main_string_utils_test.cpp  message_identifier.cpp  message_identifier.h  pack_bcd.cpp  pack_bcd.h  string_utils.cpp
examples/: pcap_replay_example.cpp
messages/: message_i001.cpp  message_i001.h  message_i002.cpp  message_i002.h  message_i010.cpp  message_i010.h  message_i081.cpp  message_i081.h  message_i083.cpp  message_i083.h  message_parser_utils.cpp  message_parser_utils.h
networking/: endian_utils.h  multicast_receiver.cpp  multicast_receiver.h  network_manager.cpp  network_manager.h  retransmission_client.cpp  retransmission_client.h  retransmission_protocol.cpp  retransmission_protocol.h
order_book/: order_book.cpp  order_book.h
sdk/: taifex_sdk.cpp  taifex_sdk.h
tests/: test_log_file_packet_simulator.cpp  test_message_i001.cpp  test_message_i002.cpp  test_message_i010.cpp  test_message_i081.cpp  test_message_i083.cpp  test_network_manager.cpp  test_order_book.cpp  test_retransmission_protocol.cpp  test_taifex_sdk.cpp
utils/: log_file_packet_simulator.cpp  log_file_packet_simulator.h
